Fix Period Performance for margin instrument like forex